# ampa

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: build.yml
ampa/: __init__.py  __main__.py
ampa/answer/: __init__.py  responder.py
ampa/api/: __init__.py  server.py
ampa/chemistry/: __init__.py  balance.py  bonding.py  compatibility.py  compounds.py  elements.py  formulas.py  geometry.py  groups.py  molecules.py  reactions.py  recognizer.py  thermo.py
ampa/cli/: __init__.py  main.py
ampa/core/: __init__.py  paths.py  platform_info.py
ampa/cycle/: __init__.py  ciclo.py
ampa/memory/: __init__.py  chunker.py  documents.py  ingest.py  retriever.py  store.py
ampa/perception/: __init__.py  classifier.py  events.py  journal.py  perceiver.py
ampa/philosophy/: __init__.py  data.py  notebook.py  recognizer.py
ampa/scribe/: __init__.py  writer.py
cpp/: CMakeLists.txt  README.md
cpp/src/: platform_probe.cpp
docs/: 00-vision.md  01-arquitectura.md  03-roadmap.md  04-glosario.md  05-base-conocimiento.md  concepto-maestro.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
packaging/: README.md  build_exe.py  entry.py
tests/: __init__.py  test_answer.py  test_api.py  test_balance.py  test_bonding.py  test_carbon.py  test_chemistry.py  test_cli.py  test_compatibility.py  test_cycle.py  test_geometry.py  test_journal.py  test_memory.py  test_molecules.py  test_paths.py  test_perception.py  test_philosophy.py  test_platform_info.py  test_scribe.py  test_thermo.py
(+45 files in other folders)
