[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ampa"
version = "0.0.1"
description = "Sistema local de lenguaje, percepción y memoria, con eje en química y filosofía."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "radixx24", email = "radixx24@gmail.com" }]
keywords = ["llm-local", "rag", "quimica", "filosofia", "portable"]

# El núcleo NO tiene dependencias externas: máxima portabilidad.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
# Se añadirán a medida que entren los módulos correspondientes:
# nn  = ["numpy"]
# rag = ["sentence-transformers", "faiss-cpu"]
# llm = ["llama-cpp-python"]

[project.scripts]
ampa = "ampa.cli.main:main"

[tool.setuptools.packages.find]
include = ["ampa*"]
